chore: add build ci

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
     "cSpell.words": [
+        "buildx",
         "Dockerfiles",
+        "DOCKERHUB",
         "Shellcheck"
     ],
 }
