feat: add docker_entry script

--- a/mycli/Dockerfile
+++ b/mycli/Dockerfile
@@ -1,8 +1,12 @@
 FROM python:3.10
 
+USER root
+WORKDIR /
+COPY ./ /
+
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN pip install mycli
 
-CMD ["—h"]
-ENTRYPOINT ["mycli"]
+ENTRYPOINT ["/docker_entry.sh"]
+CMD ["primary"]
