feat: update docker entry script

--- a/mycli/Dockerfile
+++ b/mycli/Dockerfile
@@ -7,7 +7,10 @@ COPY ./bin /
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN chmod +x /*.sh \
-    && pip install mycli
+    && pip install mycli \
+    && apt update \
+    && apt install --no-install-recommends --no-install-suggests -y less \
+    && apt clean
 
 ENTRYPOINT ["/docker_entry.sh"]
 CMD ["primary"]
