--- a/redis-cluster-proxy/Dockerfile
+++ b/redis-cluster-proxy/Dockerfile
@@ -9,7 +9,7 @@ COPY ./install /install/
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt update \
-    && apt install --no-install-recommends --no-install-suggests -y git make gcc \
+    && apt install --no-install-recommends --no-install-suggests -y git make gcc g++ \
     && apt clean \
     && git config --global http.sslverify false \
     && bash /install/install.sh \
