refactor: split build and runtime

--- a/redis-cluster-proxy/Dockerfile
+++ b/redis-cluster-proxy/Dockerfile
@@ -1,9 +1,8 @@
-FROM debian:11
+FROM debian:11 AS build
 
 USER root
 WORKDIR /
 
-COPY ./bin /
 COPY ./install /install/
 
 ENV DEBIAN_FRONTEND noninteractive
@@ -14,6 +13,19 @@ RUN apt update \
     && git config --global http.sslverify false \
     && bash /install/install.sh \
     && rm -rf /install
+
+ENTRYPOINT ["/docker_entry.sh"]
+CMD ["primary"]
+
+FROM debian:11
+
+USER root
+WORKDIR /
+
+COPY --chown=root:root --from=build /usr/local/bin/redis-cluster-proxy /usr/local/bin/
+COPY ./bin /
+
+RUN chmod +x /*.sh
 
 ENTRYPOINT ["/docker_entry.sh"]
 CMD ["primary"]
