--- a/consul-build/Dockerfile
+++ b/consul-build/Dockerfile
@@ -3,11 +3,9 @@ FROM golang:1.18-bullseye
 ARG VERSION="1.13.2"
 
 USER root
-WORKDIR /code
-COPY . /code
+WORKDIR /
 
-RUN cd .. && \
-    git clone https://github.com/hashicorp/consul.git -b ${VERSION} code && \
+RUN git clone https://github.com/hashicorp/consul.git -b ${VERSION} code && \
     cd code && \
     make linux && \
     ./pkg/bin/linux_$(go env GOARCH) \
