--- a/consul-build/Dockerfile
+++ b/consul-build/Dockerfile
@@ -8,5 +8,5 @@ WORKDIR /
 RUN git clone https://github.com/hashicorp/consul.git -b ${VERSION} code && \
     cd code && \
     make linux && \
-    ./pkg/bin/linux_$(go env GOARCH) \
+    ./pkg/bin/linux_$(go env GOARCH) version && \
     rm -rf ./pkg
