--- a/consul-build/Dockerfile
+++ b/consul-build/Dockerfile
@@ -10,3 +10,5 @@ RUN git clone https://github.com/hashicorp/consul.git -b ${VERSION} code && \
     make linux && \
     ./pkg/bin/linux_$(go env GOARCH)/consul version && \
     rm -rf ./pkg
+
+CMD ["bash"]
