fix: i ca-certificates

--- a/llvm/Dockerfile
+++ b/llvm/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt update \
-    && apt install --no-install-recommends --no-install-suggests -y wget \
+    && apt install --no-install-recommends --no-install-suggests -y wget ca-certificates \
     && apt clean \
     && wget https://apt.llvm.org/llvm.sh \
     && bash llvm.sh ${VERSION} all \
