--- a/llvm/Dockerfile
+++ b/llvm/Dockerfile
@@ -8,7 +8,12 @@ WORKDIR /
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt update \
-    && apt install --no-install-recommends --no-install-suggests -y wget ca-certificates \
+    && apt install --no-install-recommends --no-install-suggests -y \
+    wget \
+    ca-certificates \
+    lsb-release \
+    software-properties-common \
+    gnupg \
     && apt clean \
     && wget https://apt.llvm.org/llvm.sh \
     && bash llvm.sh ${VERSION} all \
