feat: support build mycli

--- a/mycli/Dockerfile
+++ b/mycli/Dockerfile
@@ -1,4 +1,8 @@
-FROM python:3.10
+ARG PYTHON_IMAGE_VERSION=3.10
+
+FROM python:${PYTHON_IMAGE_VERSION}
+
+ARG VERSION=1.26.0
 
 USER root
 WORKDIR /
@@ -7,10 +11,7 @@ COPY ./bin /
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN chmod +x /*.sh \
-    && pip install mycli \
-    && apt update \
-    && apt install --no-install-recommends --no-install-suggests -y less \
-    && apt clean
+    && VERSION=${VERSION} && bash /install.sh
 
 ENTRYPOINT ["/docker_entry.sh"]
 CMD ["primary"]
