--- a/.github/workflows/build_pgcli.yaml
+++ b/.github/workflows/build_pgcli.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://json-schema.org/draft-07/schema#
-name: Build PgCli
+name: Build PgCLI
 
 on:
   workflow_dispatch:
