--- a/.github/workflows/build_redis_cli.yaml
+++ b/.github/workflows/build_redis_cli.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://json-schema.org/draft-07/schema#
-name: Build Redis Cli
+name: Build Redis CLI
 
 on:
   workflow_dispatch:
