fix: redis-cli version

--- a/.github/workflows/build_redis_cli.yaml
+++ b/.github/workflows/build_redis_cli.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Set Version
         run: |
           REDIS_IMAGE_VERSION="${{ github.event.inputs.redis_image_version }}"
-          echo "REDIS_IMAGE_VERSION=${PYTHON_IMAGE_VERSION}" >> $GITHUB_ENV
+          echo "REDIS_IMAGE_VERSION=${REDIS_IMAGE_VERSION}" >> $GITHUB_ENV
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -55,6 +55,6 @@ jobs:
           context: ./redis-cli
           file: ./redis-cli/Dockerfile
           platforms: linux/amd64,linux/arm64
-          tags: dup4/redis-cli:${{ github.event.inputs.version }}
+          tags: dup4/redis-cli:${{ env.REDIS_IMAGE_VERSION }}
           build-args: |
             REDIS_IMAGE_VERSION=${{ env.REDIS_IMAGE_VERSION }}
