--- a/consul-build/Dockerfile
+++ b/consul-build/Dockerfile
@@ -9,6 +9,15 @@ RUN git clone https://github.com/hashicorp/consul.git -b ${VERSION} code && \
     cd code && \
     make linux && \
     ./pkg/bin/linux_$(go env GOARCH)/consul version && \
-    rm -rf ./pkg
+    rm -rf ./pkg && \
+    apt update && \
+    apt install --no-install-recommends --no-install-suggests -y \
+    lsof \
+    iproute2 \
+    telnet \
+    iputils-ping \
+    netcat \
+    socat \
+    dnsutils
 
 CMD ["bash"]
