chore: add apt clean

--- a/consul-build/Dockerfile
+++ b/consul-build/Dockerfile
@@ -5,6 +5,8 @@ ARG VERSION="v1.14.3"
 USER root
 WORKDIR /
 
+ENV DEBIAN_FRONTEND noninteractive
+
 RUN git clone https://github.com/hashicorp/consul.git -b ${VERSION} code && \
     cd code && \
     make linux && \
@@ -18,6 +20,7 @@ RUN git clone https://github.com/hashicorp/consul.git -b ${VERSION} code && \
     iputils-ping \
     netcat \
     socat \
-    dnsutils
+    dnsutils \
+    && apt clean
 
 CMD ["bash"]
