--- a/consul-build/Dockerfile
+++ b/consul-build/Dockerfile
@@ -7,20 +7,10 @@ WORKDIR /
 
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN git clone https://github.com/hashicorp/consul.git -b ${VERSION} code && \
-    cd code && \
-    make linux && \
-    ./pkg/bin/linux_$(go env GOARCH)/consul version && \
-    rm -rf ./pkg && \
-    apt update && \
-    apt install --no-install-recommends --no-install-suggests -y \
-    lsof \
-    iproute2 \
-    telnet \
-    iputils-ping \
-    netcat \
-    socat \
-    dnsutils \
-    && apt clean
+RUN git clone https://github.com/hashicorp/consul.git -b ${VERSION} code \
+    && cd code \
+    && make linux \
+    && ./pkg/bin/linux_$(go env GOARCH)/consul version \
+    && rm -rf ./pkg
 
 CMD ["bash"]
