--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -2,6 +2,8 @@ name: "Shellcheck"
 
 on:
   push:
+    branches:
+      - main
   pull_request:
 
 jobs:
@@ -9,9 +11,10 @@ jobs:
     name: Shellcheck
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v6
 
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@master
         with:
           scandir: "."
+          severity: error
