fix: xcpc-tools
Signed-off-by: Dup4 <lyuzhi.pan@gmail.com>

--- a/xcpc-tools/Dockerfile
+++ b/xcpc-tools/Dockerfile
@@ -8,21 +8,21 @@ ARG REF=main
 WORKDIR /app
 
 # Install build dependencies, clone repo at specified ref, build pkg binary
-RUN apk add --no-cache git python3 make g++ && \
+RUN apt-get update && \
+    apt-get install -y git python3 make g++ && \
     git clone ${REPO} . && \
     git checkout ${REF} && \
     corepack enable && \
-    yarn install --immutable && \
+    yarn install && \
     yarn build:pkg
 
-FROM alpine:latest
+# Runtime stage
+FROM ubuntu:24.04
 
 WORKDIR /app
 
-RUN apk add --no-cache tini dumb-init
-
-COPY --from=builder /app/dist/pkg/ /app/
+# Copy the standalone binary from build stage
+COPY --from=builder /app/dist/pkg/* /app/
 
 EXPOSE 5283
-ENTRYPOINT ["/sbin/tini", "--"]
 CMD ["/app/xcpc-tools-linux"]
