feat: introduce openresty
Signed-off-by: Dup4 <lyuzhi.pan@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,8 +17,11 @@
         "devdocs",
         "Dockerfiles",
         "DOCKERHUB",
+        "geoip",
+        "luajit",
         "mycli",
         "pgcli",
+        "RTMP",
         "Shellcheck",
         "xcpc"
     ],
