--- a/openresty/Dockerfile
+++ b/openresty/Dockerfile
@@ -5,13 +5,13 @@ FROM ubuntu:24.04 AS builder
 
 # Version arguments
 ARG OPENRESTY_VERSION=1.27.1.2
-ARG NGINX_RTMP_MODULE_VERSION=1.2.2
+ARG NGINX_RTMP_MODULE_VERSION=v1.2.2
 ARG NGINX_VOD_MODULE_VERSION=1.33
-ARG HEADERS_MORE_VERSION=0.37
-ARG NGINX_VTS_VERSION=0.2.5
-ARG NGX_ECHO_VERSION=0.63
+ARG HEADERS_MORE_VERSION=v0.39
+ARG NGINX_VTS_VERSION=v0.2.5
+ARG NGX_ECHO_VERSION=v0.64
 ARG NGX_GEOIP2_VERSION=3.4
-ARG SET_MISC_VERSION=0.33
+ARG SET_MISC_VERSION=v0.33
 
 USER root
 WORKDIR /build
