--- a/openresty/Dockerfile
+++ b/openresty/Dockerfile
@@ -7,11 +7,8 @@ FROM ubuntu:24.04 AS builder
 ARG OPENRESTY_VERSION=1.27.1.2
 ARG NGINX_RTMP_MODULE_VERSION=v1.2.2
 ARG NGINX_VOD_MODULE_VERSION=1.33
-ARG HEADERS_MORE_VERSION=v0.39
 ARG NGINX_VTS_VERSION=v0.2.5
-ARG NGX_ECHO_VERSION=v0.64
 ARG NGX_GEOIP2_VERSION=3.4
-ARG SET_MISC_VERSION=v0.33
 
 USER root
 WORKDIR /build
@@ -44,11 +41,8 @@ COPY ./bin/install.sh /build/
 ENV OPENRESTY_VERSION=${OPENRESTY_VERSION} \
     NGINX_RTMP_MODULE_VERSION=${NGINX_RTMP_MODULE_VERSION} \
     NGINX_VOD_MODULE_VERSION=${NGINX_VOD_MODULE_VERSION} \
-    HEADERS_MORE_VERSION=${HEADERS_MORE_VERSION} \
     NGINX_VTS_VERSION=${NGINX_VTS_VERSION} \
-    NGX_ECHO_VERSION=${NGX_ECHO_VERSION} \
-    NGX_GEOIP2_VERSION=${NGX_GEOIP2_VERSION} \
-    SET_MISC_VERSION=${SET_MISC_VERSION}
+    NGX_GEOIP2_VERSION=${NGX_GEOIP2_VERSION}
 
 # Execute compilation
 RUN chmod +x /build/install.sh && bash /build/install.sh
@@ -57,8 +51,6 @@ RUN chmod +x /build/install.sh && bash /build/install.sh
 # Stage 2: Runtime - Minimal runtime image
 # ============================================
 FROM ubuntu:24.04
-
-ARG OPENRESTY_VERSION=1.27.1.2
 
 USER root
 WORKDIR /
