--- a/openresty/Dockerfile
+++ b/openresty/Dockerfile
@@ -84,7 +84,10 @@ RUN useradd -r -s /sbin/nologin nginx \
     && mkdir -p /var/log/nginx \
     && mkdir -p /var/cache/nginx \
     && mkdir -p /etc/nginx/conf.d \
-    && chown -R nginx:nginx /var/log/nginx /var/cache/nginx
+    && chown -R nginx:nginx /var/log/nginx /var/cache/nginx \
+    # forward request and error logs to docker log collector
+    && ln -sf /dev/stdout /var/log/nginx/access.log \
+    && ln -sf /dev/stderr /var/log/nginx/error.log
 
 # Set PATH
 ENV PATH=/usr/local/openresty/nginx/sbin:/usr/local/openresty/bin:/usr/local/openresty/luajit/bin:$PATH
