feat: introduce lua-resty-http
Signed-off-by: Dup4 <lyuzhi.pan@gmail.com>

--- a/openresty/Dockerfile
+++ b/openresty/Dockerfile
@@ -57,6 +57,11 @@ WORKDIR /
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+# Copy compiled OpenResty from builder stage
+COPY --from=builder /usr/local/openresty /usr/local/openresty
+# Copy entry script
+COPY ./bin/docker_entry.sh /docker_entry.sh
+
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
@@ -70,17 +75,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     zlib1g \
     libbrotli1 \
     curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy compiled OpenResty from builder stage
-COPY --from=builder /usr/local/openresty /usr/local/openresty
-
-# Copy entry script
-COPY ./bin/docker_entry.sh /docker_entry.sh
-RUN chmod +x /docker_entry.sh
+    && rm -rf /var/lib/apt/lists/* \
+    && /usr/local/openresty/bin/opm get ledgetech/lua-resty-http
 
 # Create necessary directories and user
-RUN useradd -r -s /sbin/nologin nginx \
+RUN chmod +x /docker_entry.sh \
+    && useradd -r -s /sbin/nologin nginx \
     && mkdir -p /var/log/nginx \
     && mkdir -p /var/cache/nginx \
     && mkdir -p /etc/nginx/conf.d \
