--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,10 +21,12 @@
         "icpc",
         "luajit",
         "mycli",
+        "noninteractive",
         "pgcli",
         "realip",
         "RTMP",
         "Shellcheck",
+        "tzdata",
         "xcpc"
     ],
 }
